--- a/gradle.properties
+++ b/gradle.properties
@@ -6,3 +6,4 @@ plugin_version                  =   0.0.6
 ### Compile Info ###
 java_version                    =   21
 json_version                    =   20231013
+jgit_version                    =   6.6.1.202309021850-r
