--- a/gradle.properties
+++ b/gradle.properties
@@ -7,3 +7,4 @@ plugin_version                  =   0.0.6
 java_version                    =   21
 json_version                    =   20231013
 jgit_version                    =   6.6.1.202309021850-r
+hikari_version                  =   4.0.3
