--- a/gradle.properties
+++ b/gradle.properties
@@ -3,8 +3,11 @@ build_status                    =   alpha
 build_number                    =   4
 plugin_version                  =   0.1.2
 
-### Compile Info ###
+### Dependency Info ###
 java_version                    =   21
 json_version                    =   20231013
 jgit_version                    =   6.6.1.202309021850-r
 hikari_version                  =   4.0.3
+
+### Test Info ###
+junit_version                   =   5.10.0
