--- a/build.gradle
+++ b/build.gradle
@@ -12,9 +12,16 @@ repositories {
 
 dependencies {
 
+    testImplementation platform("org.junit:junit-bom:$junit_version")
+    testImplementation "org.junit.jupiter:junit-jupiter"
+
     implementation "org.json:json:$json_version"
     implementation "org.eclipse.jgit:org.eclipse.jgit:$jgit_version"
     implementation("com.zaxxer:HikariCP:$hikari_version")
+}
+
+test{
+    useJUnitPlatform()
 }
 
 publishing {
