--- a/gradle.properties
+++ b/gradle.properties
@@ -8,6 +8,7 @@ java_version                    =   21
 json_version                    =   20231013
 jgit_version                    =   6.6.1.202309021850-r
 hikari_version                  =   4.0.3
+logback_version                 =   1.5.6
 
 ### Test Info ###
 junit_version                   =   5.10.0
