added Jetty server overlay

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,7 +1,7 @@
 ### Build Info ###
 build_status                    =   alpha
-build_number                    =   6
-plugin_version                  =   0.1.2
+build_number                    =   1
+plugin_version                  =   0.1.3
 
 ### Dependency Info ###
 java_version                    =   21
@@ -9,6 +9,9 @@ json_version                    =   20231013
 jgit_version                    =   6.6.1.202309021850-r
 hikari_version                  =   4.0.3
 logback_version                 =   1.5.6
+jetty_server_version            =   11.0.0
+jetty_servlet_version           =   11.0.0
+jakarta_version                 =   6.1.0
 
 ### Test Info ###
 junit_version                   =   5.10.0
