--- a/build.gradle
+++ b/build.gradle
@@ -16,11 +16,13 @@ dependencies {
     testImplementation "org.junit.jupiter:junit-jupiter"
     testImplementation "ch.qos.logback:logback-classic:$logback_version"
 
-
-
     implementation "org.json:json:$json_version"
     implementation "org.eclipse.jgit:org.eclipse.jgit:$jgit_version"
-    implementation("com.zaxxer:HikariCP:$hikari_version")
+    implementation "com.zaxxer:HikariCP:$hikari_version"
+    implementation "org.eclipse.jetty:jetty-server:$jetty_server_version"
+    implementation "org.eclipse.jetty:jetty-servlet:$jetty_servlet_version"
+//    implementation "jakarta.servlet:jakarta.servlet-api:$jakarta_version"
+
 }
 
 test{
