--- a/build.gradle
+++ b/build.gradle
@@ -21,6 +21,11 @@ dependencies {
     implementation "com.zaxxer:HikariCP:$hikari_version"
     implementation "org.eclipse.jetty:jetty-server:$jetty_server_version"
     implementation "org.eclipse.jetty:jetty-servlet:$jetty_servlet_version"
+    implementation "com.fasterxml.jackson.core:jackson-core:$jackson_version"
+    implementation "com.fasterxml.jackson.core:jackson-databind:$jackson_version"
+    implementation "com.fasterxml.jackson.dataformat:jackson-dataformat-yaml:$jackson_version"
+    implementation "com.fasterxml.jackson.dataformat:jackson-dataformat-xml:$jackson_version"
+    implementation "com.fasterxml.jackson.dataformat:jackson-dataformat-toml:$jackson_version"
 //    implementation "jakarta.servlet:jakarta.servlet-api:$jakarta_version"
 
 }
