--- a/gradle.properties
+++ b/gradle.properties
@@ -1,7 +1,7 @@
 ### Build Info ###
 build_status                    =   alpha
 build_number                    =   1
-plugin_version                  =   0.1.3
+plugin_version                  =   0.1.4
 
 ### Dependency Info ###
 java_version                    =   21
@@ -12,6 +12,7 @@ logback_version                 =   1.5.6
 jetty_server_version            =   11.0.0
 jetty_servlet_version           =   11.0.0
 jakarta_version                 =   6.1.0
+jackson_version                 =   2.18.1
 
 ### Test Info ###
 junit_version                   =   5.10.0
